--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: SE Handbook
 description: > # this means to ignore newlines until "baseurl:"
   Handbook for software engineering CSEN 603 GUC.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://guc-se-2015.github.io/handbook/" # the base hostname & protocol for your site
 github_username:  GUC-SE-2015
 
 # Build settings
